# polyventory

./: .gitignore  Cargo.toml  plan.txt  todo  todo_now
assets/inventorys/: backpack.inventory
assets/items/: Athletic.item  backpack.item  battery_phone.item  bottle.item  bottle_water.item  can.item  ketchup_packet.item  lighter.item  phone_off.item  phone_on.item  tarp.item  torch.item
examples/: basic_inventory.rs  text.rs  ui_inventory.rs
src/: inventory.rs  lib.rs
src/egui_inspector/: mod.rs
src/interaction/: interactions.rs  mod.rs
src/interaction/cursor/: mod.rs  mouse.rs  visuals.rs
src/inventory/: cell_type.rs  entry.rs  inventory_descriptor.rs  inventory_relationship.rs  item.rs  manager.rs  mod.rs  shape.rs  slot.rs  traits.rs
src/inventory/shape/: collision.rs  mod.rs  orientation.rs
src/inventory/slot/: collision.rs  shape_iters.rs  test.rs
src/mouse_interaction/: mod.rs  tooltip.rs
src/rendering/: mod.rs  render.rs  style.rs  tooltip.rs
src/rendering/interaction/: interactions.rs  mod.rs  mouse.rs
src/rendering/node_render/: inventory_node.rs  item_node.rs  mod.rs  slot_node.rs
src/rendering/sprite_render/: mod.rs
src/serde/: error.rs  mod.rs  naming.rs
src/serde/de/: de_array.rs  de_enum.rs  de_opaque.rs  de_struct.rs  de_tuple.rs  mod.rs
src/serde/ser/: mod.rs  ser_array.rs  ser_enum.rs  ser_info.rs  ser_map.rs  ser_opaque.rs  ser_struct.rs  ser_tuple.rs
src/serde/tests/: enum.comp  marker.comp  mod.rs  struct.comp  tuple_struct.comp
