[package]
name = "polyventory"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false }
thiserror = "2"
strum_macros = "0.28"
strum = "0.28"
indexmap = "*"
bitflags = "2"
bevy-inspector-egui = {version = "*", optional = true}
ron = "*"
serde = "*"


[dev-dependencies]
bevy = { version = "0.18", features = ["default", "track_location"] }
rand = "*"

[features]
default = ["tooltips", "node_rendering", "sprite_rendering", "mouse_interaction", "inspector"]
rendering = []
node_rendering = ["rendering"]
sprite_rendering = ["rendering"]
mouse_interaction = ["interaction", "rendering"]
interaction = []
tooltips = ["bevy/experimental_bevy_feathers", "rendering"]
inspector = ["dep:bevy-inspector-egui"]

[[example]]
name = "basic_inventory"
features = ["bevy/file_watcher", "inspector"]

[[example]]
name = "ui_inventory"
features = ["bevy/file_watcher", "inspector", "node_rendering"]

[profile.release]
debug = true